<resources>
    <string name="app_name">Aula24exLoginRefeito</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="agree">I agree to the Terms of Use</string>
    <string name="sign_up">Sign UP</string>
    <string name="log_in">Log in</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up2">SIGN UP</string>
    <string name="meu_app">Meu App</string>
    <string name="sign_up3">Sign Up</string>
    <string name="or">or</string>
    <string name="log_in2">Log In</string>

</resources>