<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context=".SignUpFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUserNameSignup"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/colorAccent"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxStrokeColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTextUserNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtRepeatPasswordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRptPassSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbAgree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:text="@string/agree"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        app:cornerRadius="30dp"
        android:textColor="@color/colorWhite"
        />
</LinearLayout>

<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".SignUpFragment">-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/txtUserNameLogin"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:hint="username"-->
<!--        app:boxCornerRadiusBottomEnd="20dp"-->
<!--        app:boxCornerRadiusBottomStart="20dp"-->
<!--        app:boxCornerRadiusTopEnd="20dp"-->
<!--        app:boxCornerRadiusTopStart="20dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/edtTextUserNameSignUp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/txtPasswordLogin"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:hint="password"-->
<!--        app:boxCornerRadiusBottomEnd="20dp"-->
<!--        app:boxCornerRadiusBottomStart="20dp"-->
<!--        app:boxCornerRadiusTopEnd="20dp"-->
<!--        app:boxCornerRadiusTopStart="20dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtUserNameLogin">>-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textPassword" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/txtRepeatPasswordLogin"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:hint="repeat password"-->
<!--        app:boxCornerRadiusBottomEnd="20dp"-->
<!--        app:boxCornerRadiusBottomStart="20dp"-->
<!--        app:boxCornerRadiusTopEnd="20dp"-->
<!--        app:boxCornerRadiusTopStart="20dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtPasswordLogin">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textPassword" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <CheckBox-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtRepeatPasswordLogin"-->
<!--        android:text="I Agree"/>-->

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/btnSignUp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:text="Sign Up"-->
<!--        android:textSize="20sp"-->
<!--        android:textAllCaps="false"-->
<!--        app:cornerRadius="30dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->